Updated /css file path

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -3,9 +3,7 @@
 
 <head>
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-        <link rel="StyleSheet" href="main.css" type="text/css" />
-        <link rel="StyleSheet" href="login-page.css" type="text/css" />
-        <link rel="StyleSheet" href="navbar.css" type="text/css" />
+        <link rel="StyleSheet" href="/css/accounts.css" type="text/css" />
         <meta name="viewport" content="width=device-width" />
 </head>
 
