--- a/public/html/register.html
+++ b/public/html/register.html
@@ -8,12 +8,19 @@
 </head>
 
 <body>
-        <button onclick="window.location.href='/Login'">Login</button>
+        <div class="navbar">
+                <button onclick="window.location.href='/'">Home</button>
+                <div class="accounts">
+                        <button onclick="window.location.href='#'">Register</button>
+                        <button onclick="window.location.href='/login'">Login</button>
+                </div>
+        </div>
 
-        <form class="tool-form" id="login-form" enctype="multipart/form-data" method="post" action="/register">
+        <form class="form" id="register-form" enctype="multipart/form-data" method="post" action="/register">
                 <input name="user" type="text" placeholder="Username" />
                 <input id="password" name="password" type="password" placeholder="Password" />
-                <input id="passwordverify" name="passwordverify" type="password" placeholder="Password" />
+                <input id="passwordverify" name="passwordverify" type="password" placeholder="Verify Password" />
+                <input id="register" type="submit" value="Register">
         </form>
 </body>
 
