--- a/public/html/register.html
+++ b/public/html/register.html
@@ -3,7 +3,7 @@
 
 <head>
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-        <link href="/css/accounts.css", rel="stylesheet" />
+        <link href="/css/public.css", rel="stylesheet" />
         <meta name="viewport" content="width=device-width" />
 </head>
 
