Changed logo style to display style

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -16,7 +16,7 @@
             <button onclick="window.location.href='#'">Login</button>
         </div>
     </div>
-    <div class="logo" id="logo">
+    <div class="display" id="logo">
         <img src="/images/logo.webp">
     </div>
     <form class="form" id="login-form" enctype="multipart/form-data" method="post" action="/login">
