--- a/public/html/register.html
+++ b/public/html/register.html
@@ -16,7 +16,7 @@
                         <button onclick="window.location.href='/login'">Login</button>
                 </div>
         </div>
-        <div class="logo" id="logo">
+        <div class="display" id="logo">
                 <img src="/images/logo.webp">
         </div>
         <form class="form" id="register-form" enctype="multipart/form-data" method="post" action="/register">
