Added titles to all pages

--- a/public/html/register.html
+++ b/public/html/register.html
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
         <link href="/css/public.css", rel="stylesheet" />
         <meta name="viewport" content="width=device-width" />
+        <title>Register</title>
 </head>
 
 <body>
