--- a/public/html/login.html
+++ b/public/html/login.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
     <link rel="StyleSheet" href="/css/public.css" type="text/css" />
     <meta name="viewport" content="width=device-width" />
+    <title>Login</title>
 </head>
 
 <body>
